--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 .img-background {
+  background-size: cover;
   background-position: center;
   background-image: url(https://images.unsplash.com/photo-1471295253337-3ceaaedca402?q=80&w=2668&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
